# c-project-template

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: main.c
cmake/: compiler_warnings.cmake
include/project/core/: log.h
include/project/math/: add.h  subtract.h
scripts/: format.sh  lint.sh
src/core/: log.c
src/math/: add.c  subtract.c
tests/: test_add.c  test_main.c  test_subtract.c
